// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tooltip /> snapshots should render and match the snapshot 1`] = `
<div>
  <button
    title="Hello World"
    type="submit"
  >
    Hello World
  </button>
</div>
`;

exports[`<Tooltip /> snapshots should render and match the snapshot when hovered 1`] = `
<div>
  <button
    aria-describedby="tooltip"
    type="submit"
  >
    Hello World
  </button>
</div>
`;

exports[`<Tooltip /> snapshots should render and match the tooltip snapshot 1`] = `
<div
  class="sc-AxiKw cvHVSd"
  id="tooltip"
  role="tooltip"
  style="position: fixed;"
>
  <div
    class="sc-AxjAm eJWUDC"
    style="opacity: 1; transform: scale(1, 1); transition: opacity 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,transform 100ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
  >
    Hello World
  </div>
</div>
`;
